--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@ body {
     font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header-content {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
 
-.aaa img {
+.header-content img {
     width: 100%;
 }
 
-.aaa .more_inf {
+.header-content .more_inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-    .aaa {
+    .header-content {
         text-align: center;
     }
 }
