--- a/style.css
+++ b/style.css
@@ -153,7 +153,8 @@ li>input[type="text"] {
 
 /* Completed */
 #completed-tasks label {
-    text-decoration: line-through color: #888;
+    text-decoration: line-through; 
+    color: #888;
 }
 
 /* Edit Task */
